@@ -1,0 +1,1 @@
+co.elastic.apm.agent.grails.GrailsTransactionNameInstrumentation
